# patchbot-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: commands.rs  main.rs
src/commands/: general.rs  gifs.rs  mod.rs  osu.rs  utility.rs  wheel.rs
