[package]
name = "patchbot_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
reqwest = { version = "0.13.2", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.149"
serenity = "0.12.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.44"
