[package]
name = "patchbot_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
once_cell = "1.21.4"
poise = "0.6.1"
reqwest = { version = "0.13.2", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.149"
serenity = "0.12.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.44"
random_word = { version = "0.5.2", features = ["en"] }
quickchart-rs = "0.1.1"
rand = "0.10.1"
